# coding-research-agent

./: .gitignore  README.md
advanced-agent/: main.py  pyproject.toml
advanced-agent/src/: firecrawl.py  models.py  prompts.py  workflow.py
simple-agent/: main.py  pyproject.toml
